# git-aicommit

./: Cargo.toml  DEVELOPMENT.md  README.md  justfile  lefthook.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
