[package]
name = "git-aicommit"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
authors = ["Justin Chung <noreply@justinchung.net>"]
description = "Generate git commit messages from staged diffs using Claude."
license = "MIT OR Apache-2.0"
repository = "https://github.com/getkono/git-ai-commits"
homepage = "https://github.com/getkono/git-ai-commits"
readme = "README.md"
keywords = ["git", "commit", "ai", "claude", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["target/", "/.github", "DEVELOPMENT.md"]

[dependencies]
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
